Final fixes, still problems with text wrap in footer in mobile layout.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -136,8 +136,9 @@ h1 {
     bottom: 0.625rem;
     left: 0.625rem;
     color: black;
-    font-family: 'rubik',sans-serif, 400;
+    font-family:'rubik',sans-serif;
     text-decoration: none;
+
 }
 .space-ventures {
     margin:0;
